# Sunny

./: .dockerignore  .editorconfig  .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  pyproject.toml  sunny.toml.example
src/Sunny.Core/: CMakeLists.txt
src/Sunny.Core/Acoustics/: ACHS001A.h  ACPL001A.h  ACRG001A.h  ACVP001A.h
src/Sunny.Core/Corpus/: CIAN001A.cpp  CIAN001A.h  CIDC001A.h  CISZ001A.cpp  CISZ001A.h  CITP001A.h  CIVD001A.cpp  CIVD001A.h  CIWF001A.cpp  CIWF001A.h
src/Sunny.Core/Form/: FMMT001A.cpp  FMMT001A.h  FMST001A.cpp  FMST001A.h
src/Sunny.Core/Harmony/: HRCD001A.cpp  HRCD001A.h  HRCH001A.cpp  HRCH001A.h  HRCS001A.cpp  HRCS001A.h  HRFN001A.cpp  HRFN001A.h  HRNG001A.cpp  HRNG001A.h  HRNT001A.cpp  HRNT001A.h  HRRN001A.cpp  HRRN001A.h  HRSD001A.cpp  HRSD001A.h  HRST001A.cpp  HRST001A.h
src/Sunny.Core/Melody/: MLCT001A.cpp  MLCT001A.h
src/Sunny.Core/Mix/: MIDC001A.h  MISZ001A.cpp  MISZ001A.h  MITP001A.h  MIVD001A.cpp  MIVD001A.h  MIWF001A.cpp  MIWF001A.h
src/Sunny.Core/Pitch/: PTDI001A.cpp  PTDI001A.h  PTDN001A.cpp  PTDN001A.h  PTMN001A.h  PTPC001A.cpp  PTPC001A.h  PTPS001A.cpp  PTPS001A.h  PTSP001A.cpp  PTSP001A.h
src/Sunny.Core/PostTonal/: SRTW001A.cpp  SRTW001A.h
src/Sunny.Core/Rhythm/: RHEU001A.cpp  RHEU001A.h  RHTS001A.cpp  RHTS001A.h  RHTU001A.cpp  RHTU001A.h
src/Sunny.Core/Scale/: SCDF001A.cpp  SCDF001A.h  SCGN001A.cpp  SCGN001A.h  SCRN001A.cpp  SCRN001A.h
src/Sunny.Core/Score/: SICM001A.cpp  SICM001A.h  SIDC001A.h  SIHA001A.cpp  SIHA001A.h  SIMT001A.cpp  SIMT001A.h  SIQR001A.cpp  SIQR001A.h  SISZ001A.cpp  SISZ001A.h  SITM001A.cpp  SITM001A.h  SITP001A.h  SIVD001A.cpp  SIVD001A.h  SIVW001A.cpp  SIVW001A.h  SIWF001A.cpp  SIWF001A.h
src/Sunny.Core/Tensor/: TNBT001A.h  TNEV001A.h  TNTP001A.h
src/Sunny.Core/Timbre/: TIDC001A.h  TISZ001A.cpp  TISZ001A.h  TITP001A.h  TIVD001A.cpp  TIVD001A.h  TIWF001A.cpp  TIWF001A.h
src/Sunny.Core/Transform/: GIKN001A.cpp  GIKN001A.h  GIST001A.h  NRPL001A.cpp  NRPL001A.h
src/Sunny.Core/Tuning/: TUET001A.h  TUHT001A.cpp  TUHT001A.h  TUJI001A.h
src/Sunny.Core/VoiceLeading/: VLCN001A.cpp  VLCN001A.h  VLFB001A.cpp  VLFB001A.h  VLNT001A.cpp  VLNT001A.h  VLSC001A.cpp  VLSC001A.h
src/Sunny.Infrastructure/: CMakeLists.txt
src/Sunny.Infrastructure/Application/: INOR001A.cpp  INOR001A.h  INWF001A.cpp  INWF001A.h
src/Sunny.Infrastructure/Binding/: BDPY001A.cpp
src/Sunny.Infrastructure/Bridge/: INBR001A.cpp  INBR001A.h  INTP001A.cpp  INTP001A.h  OSCAPI001A.h
src/Sunny.Infrastructure/Corpus/: CIIN001A.cpp  CIIN001A.h
src/Sunny.Infrastructure/Format/: FMAB001A.cpp  FMAB001A.h  FMAL001A.cpp  FMAL001A.h  FMAL002A.cpp  FMAL002A.h  FMAL003A.cpp  FMAL003A.h  FMLY001A.cpp  FMLY001A.h  FMLY002A.cpp  FMLY002A.h  FMMI001A.cpp  FMMI001A.h  FMMX001A.cpp  FMMX001A.h  FMMX002A.cpp  FMMX002A.h  FMMX_Internal.h  FMSL001A.cpp  FMSL001A.h
src/Sunny.Infrastructure/Mcp/: MCPS001A.cpp  MCPS001A.h  MCPT001A.cpp  MCPT001A.h  MCPT002A.cpp  MCPT002A.h  MCPT003A.cpp  MCPT003A.h  MCPT004A.cpp  MCPT004A.h  MCPT005A.cpp  MCPT005A.h  main.cpp
src/Sunny.Infrastructure/Protocol/: WPOSC001A.cpp  WPOSC001A.h
src/Sunny.Infrastructure/RealTime/: RTLF001A.h
src/Sunny.Infrastructure/Session/: INSM001A.cpp  INSM001A.h
src/Sunny.Infrastructure/Transport/: INTP001A.cpp  INTP001A.h
src/Sunny.Max/: CMakeLists.txt  Info.plist.in
src/Sunny.Max/Algorithm/: EuclideanBresenham.h  ParameterSmoothing.h  VoiceLeadStandalone.h
src/Sunny.Max/Rnbo/: sunny.modulation.rnbopat
src/Sunny.Render/: CMakeLists.txt
src/Sunny.Render/Arpeggio/: RDAP001A.cpp  RDAP001A.h
src/Sunny.Render/Modulation/: RDMD001A.cpp  RDMD001A.h
src/Sunny.Render/Transport/: RDTR001A.cpp  RDTR001A.h
src/Sunny.Test/: CMakeLists.txt
src/Sunny.Test/Benchmark/: TSBM001A.cpp
src/Sunny.Test/Python/: conftest.py  test_native_core.py
src/Sunny.Test/Sunny.Core/Acoustics/: TSAC001A.cpp
src/Sunny.Test/Sunny.Core/Corpus/: TSCI001A.cpp  TSCI002A.cpp  TSCI003A.cpp  TSCI004A.cpp  TSCI005A.cpp  TSCI006A.cpp  TSCI008A.cpp
src/Sunny.Test/Sunny.Core/Form/: TSFM001A.cpp
src/Sunny.Test/Sunny.Core/Harmony/: TSCD001A.cpp  TSCH001A.cpp  TSCS001A.cpp  TSHF001A.cpp  TSHN001A.cpp  TSHR001A.cpp  TSNT001A.cpp  TSSD001A.cpp  TSST001A.cpp
src/Sunny.Test/Sunny.Core/Melody/: TSML001A.cpp
src/Sunny.Test/Sunny.Core/Mix/: TSMI001A.cpp  TSMI002A.cpp  TSMI003A.cpp  TSMI004A.cpp  TSMI005A.cpp
src/Sunny.Test/Sunny.Core/Pitch/: TSDG001A.cpp  TSDI001A.cpp  TSDN001A.cpp  TSMN001A.cpp  TSPS001A.cpp  TSPT001A.cpp  TSSP001A.cpp
src/Sunny.Test/Sunny.Core/PostTonal/: TSTW001A.cpp
src/Sunny.Test/Sunny.Core/Rhythm/: TSRH001A.cpp  TSTS001A.cpp  TSTU001A.cpp
src/Sunny.Test/Sunny.Core/Scale/: TSSC001A.cpp  TSSG001A.cpp  TSSR001A.cpp
src/Sunny.Test/Sunny.Core/Score/: TSSI001A.cpp  TSSI002A.cpp  TSSI003A.cpp  TSSI004A.cpp  TSSI005A.cpp  TSSI006A.cpp  TSSI007A.cpp  TSSI008A.cpp  TSSI009A.cpp  TSSI010A.cpp  TSSI011A.cpp  TSSI012A.cpp  TSSI013A.cpp
src/Sunny.Test/Sunny.Core/Tensor/: TSTN001A.cpp
src/Sunny.Test/Sunny.Core/Timbre/: TSTI001A.cpp  TSTI002A.cpp  TSTI003A.cpp  TSTI004A.cpp  TSTI005A.cpp
src/Sunny.Test/Sunny.Core/Transform/: TSGI001A.cpp  TSKN001A.cpp  TSNR001A.cpp
src/Sunny.Test/Sunny.Core/Tuning/: TSET001A.cpp  TSHT001A.cpp  TSJI001A.cpp
src/Sunny.Test/Sunny.Core/VoiceLeading/: TSCN001A.cpp  TSFB001A.cpp  TSSC001A.cpp  TSVL001A.cpp
src/Sunny.Test/Sunny.Infrastructure/: TSIG001A.cpp
src/Sunny.Test/Sunny.Infrastructure/Application/: TSOR001A.cpp  TSWF001A.cpp
src/Sunny.Test/Sunny.Infrastructure/Bridge/: TSBR003A.cpp
src/Sunny.Test/Sunny.Infrastructure/Corpus/: TSCI007A.cpp
src/Sunny.Test/Sunny.Infrastructure/Format/: TSAB001A.cpp  TSAL001A.cpp  TSAL002A.cpp  TSAL003A.cpp  TSLY001A.cpp  TSLY002A.cpp  TSMF001A.cpp  TSMX001A.cpp  TSMX002A.cpp  TSSL001A.cpp
src/Sunny.Test/Sunny.Infrastructure/Mcp/: TSMC001A.cpp
src/Sunny.Test/Sunny.Infrastructure/Protocol/: TSOC001A.cpp
src/Sunny.Test/Unit/: TSAP001A.cpp  TSBR002A.cpp  TSHF001A.cpp  TSLF001A.cpp  TSMD001A.cpp  TSPS001A.cpp  TSRH001A.cpp  TSSC001A.cpp  TSVL001A.cpp
(+120 files in other folders)
